AdminParticipants and AdminCharity components
- Fix to initial data-theme attribute
- Added AdminCharity component
- Added AdminParticipants component
- Moved participants routes to participant service
- Added Admin sub-nav
- Now clicking on Event row selects the event
- Remove event drop-down from AdminSchedule component, pass in selectedEvent

--- a/src/components/MagicLamp.astro
+++ b/src/components/MagicLamp.astro
@@ -35,13 +35,25 @@
 </style>
 
 <script>
-  function changeLampMessage(msg) {
-    document.getElementById("lamp-message").innerHTML = msg;
+  function changeLampMessage(msg: string) {
+    const lampMessage = document.getElementById("lamp-message");
+    if (lampMessage) {
+      lampMessage.innerHTML = msg;
+    }
   }
   window.onload = function () {
+    const prefersDarkMode = window.matchMedia(
+      "(prefers-color-scheme: dark)",
+    ).matches;
+    document.documentElement.setAttribute(
+      "data-theme",
+      prefersDarkMode ? "dark" : "light",
+    );
+
     let rubbed = 0;
     let freed = false;
     const magicLampDiv = document.getElementById("magic-lamp");
+    if (!magicLampDiv) return;
     magicLampDiv.innerHTML = "(";
 
     magicLampDiv.addEventListener("click", () => {
@@ -62,7 +74,10 @@
       }
       if (rubbed % 537 === 0) {
         freed = true;
-        document.getElementById("djinni").innerHTML = "&";
+        const djinni = document.getElementById("djinni");
+        if (djinni) {
+          djinni.innerHTML = "&";
+        }
         const random = Math.random();
         if (random < 0.2) {
           changeLampMessage("I am in your debt. I will grant one wish!");
