--- a/src/components/Charity.astro
+++ b/src/components/Charity.astro
@@ -38,6 +38,18 @@ _______________________{line}_____
     white-space: pre;
   }
 
+  @media (max-width: 768px) {
+    .charity-text {
+      font-size: 0.6rem;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .charity-text {
+      font-size: 0.4rem;
+    }
+  }
+
   .donate-now {
     background-color: var(--color-c);
     color: black;
