--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -3,11 +3,11 @@
   role="img"
   aria-labelledby="logo-title"
   width="100%"
-  viewBox="0 0 74.801392 9.6893005"
+  viewBox="0 0 74.801392 11.5"
   xmlns="http://www.w3.org/2000/svg"
 >
   <title id="logo-title">NetHackathon Logo</title>
-  <g transform="translate(-11.244034,-50.369428)">
+  <g transform="translate(-11.244034,-49.5)">
     <text
       xml:space="preserve"
       style="font-size:10px;line-height:1.25;text-align:center;text-anchor:middle;stroke-width:0.264583"
